Updated index.html classes for individual buttons

--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
         <button id="clear-btn" class="btn">C</button>
       </div>
       <div class="other-rows">
-        <button class="btn number">7</button>
-        <button class="btn number">8</button>
-        <button class="btn number">9</button>
-        <button class="btn operator">/</button>
+        <button class="btn number seven">7</button>
+        <button class="btn number eight">8</button>
+        <button class="btn number nine">9</button>
+        <button class="btn operator division">/</button>
       </div>
       <div class="other-rows">
-        <button class="btn number">4</button>
-        <button class="btn number">5</button>
-        <button class="btn number">6</button>
-        <button class="btn operator">x</button>
+        <button class="btn number four">4</button>
+        <button class="btn number five">5</button>
+        <button class="btn number six">6</button>
+        <button class="btn operator multiply">x</button>
       </div>
       <div class="other-rows">
-        <button class="btn number">1</button>
-        <button class="btn number">2</button>
-        <button class="btn number">3</button>
-        <button class="btn operator">-</button>
+        <button class="btn number one">1</button>
+        <button class="btn number two">2</button>
+        <button class="btn number three">3</button>
+        <button class="btn operator minus">-</button>
       </div>
       <div class="other-rows">
         <button class="btn decimal">.</button>
-        <button class="btn number">0</button>
+        <button class="btn number zero">0</button>
         <button class="btn equal">=</button>
-        <button class="btn operator">+</button>
+        <button class="btn operator plus">+</button>
       </div>
     </div>
   </body>
